--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -1,3 +1,3 @@
 <% @coupons.each do |coupon| %>
-    <%= links_to coupon.coupon_code, coupon_path(coupon) %>
+    <%= link_to coupon.coupon_code, coupon_path(coupon) %>
 <% end %>
